--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: StatComp21091
 Type: Package
 Title: Statistic Computing project
-Version: 0.3.0
+Version: 0.4.0
 Author: Gongshijin
 Maintainer: Gongshijin <gongshijin0409@mail.ustc.edu.cn>
 Description: This package is used for finals of Statistic Computing. 
@@ -16,6 +16,7 @@ Imports:
     energy,
     Ball,
     parallel,
+    stats,
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 Encoding: UTF-8
